fixes for alignment; added configuration features

--- a/src/_grid2flex-variables.scss
+++ b/src/_grid2flex-variables.scss
@@ -8,7 +8,8 @@ $configuration: (
 	offsets-enabled:                             true,
 	row-vertical-alignment-enabled:              true,
 	row-horizontal-alignment-enabled:            true,
-	column-vertical-alignment-enabled:           true
+	column-vertical-alignment-enabled:           true,
+	breakpoints-enabled:                         true
 ) !default;
 
 // default gutters
